<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myCoordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_garage"
    >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/TextView_AsyncTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners"
            android:padding="16dp"
            android:text="@string/hello_world_click_me_to_explore_experimentation"
            android:textColor="#fff"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_print"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="PRINT  "
            app:layout_constraintEnd_toEndOf="@+id/TextView_AsyncTask"
            app:layout_constraintStart_toStartOf="@+id/TextView_AsyncTask"
            app:layout_constraintTop_toBottomOf="@+id/TextView_AsyncTask" />

        <Button
            android:id="@+id/btn_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email Receipt"
            app:layout_constraintEnd_toEndOf="@+id/btn_print"
            app:layout_constraintStart_toStartOf="@+id/btn_print"
            app:layout_constraintTop_toBottomOf="@+id/btn_print" />

        <Button
            android:id="@+id/btn_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_settings"
            app:layout_constraintEnd_toEndOf="@+id/btn_email"
            app:layout_constraintStart_toStartOf="@+id/btn_email"
            app:layout_constraintTop_toBottomOf="@+id/btn_email" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/white"
            app:layout_constraintEnd_toStartOf="@+id/btn_send_msg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_settings">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edit_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_send_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/send"
            android:onClick="gotoNextActivity"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textInputLayout"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>